[gd_scene load_steps=18 format=4 uid="uid://ce6b0dfduypqr"]

[ext_resource type="Script" path="res://scene/scale/scale.gd" id="1_x2ftb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dguip"]

[sub_resource type="ArrayMesh" id="ArrayMesh_bdd4c"]
_surfaces = [{
"aabb": AABB(-0.28684, 0.0131597, -0.28684, 0.573681, 6.68968, 0.573681),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAHAAUABAAGAAcABgAJAAcABgAIAAkACAALAAkACAAKAAsACgANAAsACgAMAA0ABQABAAMAAQANAA8ADQAJAAsACQAFAAcABQANAAEADQAFAAkADAAPAA0ADAAOAA8ADgABAA8ADgAAAAEADgACAAAAAgAGAAQABgAKAAgACgAOAAwADgAGAAIABgAOAAoA"),
"lods": [0.110096, PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAJAAUABAAKAAkACgANAAkACgAMAA0ABQABAAMABQANAAEADQAFAAkADAABAA0ADAAAAAEADAACAAAADAAEAAIABAAMAAoA"), 0.216776, PackedByteArray("AAAFAAEAAAAEAAUABAANAAUABAAMAA0ABQANAAEADAABAA0ADAAAAAEADAAEAAAA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("/38AAAAAAAD/f///AAAAAIHaAAB9JQAAgdr//30lAAD//wAA/38AAP//////fwAAgdoAAIHaAACB2v//gdoAAP9/AAD//wAA/3//////AAB9JQAAgdoAAH0l//+B2gAAAAAAAP9/AAAAAP///38AAH0lAAB9JQAAfSX//30lAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_bfrgu"]
resource_name = "scale_Cylinder"
_surfaces = [{
"aabb": AABB(-0.28684, 0.0131597, -0.28684, 0.573681, 6.68968, 0.573681),
"attribute_data": PackedByteArray("/7+Ogv///38AAP9//z+Ogv//AAAAAAAAcOuNlP/f/3//3/9/cWuNlP/fAAD/3wAAb/3/v/+//3//v/9/cH3/v/+/AAD/vwAAcOtw6/+f/3//n/9/cWtw6/+fAAD/nwAA/79v/f9//3//f/9//z9v/f9/AAD/fwAAjZRw6/9f/3//X/9/jhRw6/9fAAD/XwAAjoL/v/8//3//P/9/jwL/v/8/AAD/PwAAjZSNlP8f/3//H/9/jhSNlP8fAAD/HwAA/7//f/+//3//v/9//78AAP+/AAD/P/9//z//f/8/AAD/PwAA/z8AAAAAAAD/3/9//98AAP+//3//v/9//78AAP9/AAD/fwAA/38AAP9f/3//X/9//z//f/8/AAA="),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray("AQAKAAQAAQAHAAoACAARAAsACAAOABEADQAXABAADQAUABcAEwAcABYAEwAZABwAGgAiAB0AGgAfACIAIAAoACMAIAAlACgADwADAAkAAwAnAC0AJwAbACEAGwAPABUADwAnAAMAJwAPABsAJgAvACkAJgAsAC8AKwAFAC4AKwACAAUAKgAGAAAABgASAAwAEgAeABgAHgAqACQAKgASAAYAEgAqAB4A"),
"lods": [0.110096, PackedByteArray("AQA8AAQAAQA7ADwAOwA/ADwAOwA9AD8APQBAAD8APgBDAEEARAAoAEIARAAlACgADwADAAkADwAnAAMAJwAPABsARQA6AEYARQACADoAJAAGAAAAJAAMAAYADAAkAB4A"), 0.216776, PackedByteArray("AQAzAAQAAQAwADMAMQA3ADQAMgA1ADgADwAnAAMANgAFADkANgACAAUAJAAMAAAA")],
"material": SubResource("StandardMaterial3D_dguip"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 71,
"vertex_data": PackedByteArray("/38AAAAA/z//fwAAAAD+7/9/AAAAAP7v/3///wAA/7//f///AAD+7/9///8AAP7vgdoAAH0l/z+B2gAAfSX+74HaAAB9Jf/Pgdr//30l/7+B2v//fSX+74Ha//99Jf/P//8AAP9//z///wAA/3//r///AAD/f//P//////9//7///////3//r///////f//PgdoAAIHa/z+B2gAAgdr/j4HaAACB2v+vgdr//4Ha/7+B2v//gdr/j4Ha//+B2v+v/38AAP///z//fwAA////j/9/AAD///+P/3///////7//f///////j/9///////+PfSUAAIHa/z99JQAAgdr/j30lAACB2v+vfSX//4Ha/799Jf//gdr/j30l//+B2v+vAAAAAP9//z8AAAAA/3//rwAAAAD/f//PAAD///9//78AAP///3//rwAA////f//PfSUAAH0l/z99JQAAfSX+730lAAB9Jf/PfSX//30l/799Jf//fSX+730l//99Jf/P//8AAP9/s8L//wAA/3++pf//AAD/f/Gg//////9/KsP//////3/tqQAAAAD/f2qjAAAAAP9/vcQAAP///3/moAAA////fxKnAAD///9/2cH/f///AACu6YHaAAB9JWnjgdr//30lOOr//wAA/3/ft///AAD/fzGk//////9/rbr/f/////8Snv9//////8KM/3//////XpZ9JQAAgdpHi30lAACB2rCeAAAAAP9/2MQAAP///3+hwAAA/3//fwAA/3///////3//fwAA/3///wAA/3//fwAA/38AAP///3//fwAA/38AAAAA/3//fwAA/38AAP///3//fwAA/38AAAAA/3//fwAA/38AAP///3//fwAA/38AAAAA/3//fwAA/3///////3//fwAA/3///wAA/3//f////3///////3//f////3///wAA/3//f////3///////3//f////3///wAA/3//f////3///////3//f////3////9/AAD/fwAA/38AAP9/AAD/fwAA/3////9/////f////3////9/////f////38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/////f////3////9/////f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_bdd4c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gwe05"]

[sub_resource type="ArrayMesh" id="ArrayMesh_vlbs4"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAHAAUABAAGAAcABgAJAAcABgAIAAkACAALAAkACAAKAAsACgANAAsACgAMAA0ABQABAAMAAQANAA8ADQAJAAsACQAFAAcABQANAAEADQAFAAkADAAPAA0ADAAOAA8ADgABAA8ADgAAAAEADgACAAAAAgAGAAQABgAKAAgACgAOAAwADgAGAAIABgAOAAoA"),
"lods": [0.318437, PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAJAAUABAAKAAkACgANAAkACgAMAA0ABQABAAMABQANAAEADQAFAAkADAABAA0ADAAAAAEADAACAAAADAAEAAIABAAMAAoA"), 0.619714, PackedByteArray("AAAFAAEAAAAEAAUABAANAAUABAAMAA0ABQANAAEADAABAA0ADAAAAAEADAAEAAAA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("/38AAAAAAAD/f///AAAAAIHaAAB9JQAAgdr//30lAAD//wAA/38AAP//////fwAAgdoAAIHaAACB2v//gdoAAP9/AAD//wAA/3//////AAB9JQAAgdoAAH0l//+B2gAAAAAAAP9/AAAAAP///38AAH0lAAB9JQAAfSX//30lAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_jj8ug"]
resource_name = "scale_Cylinder_001"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/7+Ogv///38AAP9//z+Ogv//AAAAAAAAcOuNlP/f/3//3/9/cWuNlP/fAAD/3wAAb/3/v/+//3//v/9/cH3/v/+/AAD/vwAAcOtw6/+f/3//n/9/cWtw6/+fAAD/nwAA/79v/f9//3//f/9//z9v/f9/AAD/fwAAjZRw6/9f/3//X/9/jhRw6/9fAAD/XwAAjoL/v/8//3//P/9/jwL/v/8/AAD/PwAAjZSNlP8f/3//H/9/jhSNlP8fAAD/HwAAAAAAAP+//3//v/9//78AAP+/AAD/P/9//z//f/8/AAD/PwAAAAAAAP/f/3//3wAA/7//f/+//3//vwAA/38AAP9/AAD/X/9//1//f/8//3//PwAA"),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray("AQAKAAQAAQAHAAoACAARAAsACAAOABEADQAXABAADQAUABcAEwAcABYAEwAZABwAGgAiAB0AGgAfACIAIAAoACMAIAAlACgADwADAAkAAwAnAC0AJwAbACEAGwAPABUADwAnAAMAJwAPABsAJgAvACkAJgAsAC8AKwAFAC4AKwACAAUAKgAGAAAABgASAAwAEgAeABgAHgAqACQAKgASAAYAEgAqAB4A"),
"lods": [0.318437, PackedByteArray("AQA7AAQAAQA6ADsAOgA+ADsAOgA8AD4APQA/ABAAPQBBAD8AQgAoAEAAQgAlACgADwADAAkADwAnAAMAJwAPABsAQwA5AEQAQwACADkAJAAGAAAAJAAMAAYADAAkAB4A"), 0.619714, PackedByteArray("AQAzAAQAAQAxADMAMgA3ADQAMgA1ADcADwAnAAMANgAwADgANgACADAAJAAMAAAA")],
"material": SubResource("StandardMaterial3D_gwe05"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 69,
"vertex_data": PackedByteArray("/38AAAAA/z//fwAAAAD+7/9/AAAAAP7v/3///wAA/7//f///AAD+7/9///8AAP7vgdoAAH0l/z+B2gAAfSX+74HaAAB9Jf/Pgdr//30l/7+B2v//fSX+74Ha//99Jf/P//8AAP9//z///wAA/3//r///AAD/f//P//////9//7///////3//r///////f//PgdoAAIHa/z+B2gAAgdr/j4HaAACB2v+vgdr//4Ha/7+B2v//gdr/j4Ha//+B2v+v/38AAP///z//fwAA////j/9/AAD///+P/3///////7//f///////j/9///////+PfSUAAIHa/z99JQAAgdr/j30lAACB2v+vfSX//4Ha/799Jf//gdr/j30l//+B2v+vAAAAAP9//z8AAAAA/3//rwAAAAD/f//PAAD///9//78AAP///3//rwAA////f//PfSUAAH0l/z99JQAAfSX+730lAAB9Jf/PfSX//30l/799Jf//fSX+730l//99Jf/P/3///wAAx+j//wAA/38Qwv//AAD/fxqi//////9/0sP//////3+LpAAAAAD/f/ujAAAAAP9/7sMAAP///3/voAAA////f/HA/3///wAAReqB2gAAfSVp44Ha//99JTjq//8AAP9//7///wAA/39Mqf//////f/+//3//////RJT/f//////Fk30lAACB2jWOfSUAAIHa3J0AAAAA/38AxQAA////f3rBAAD/f/9/AAD/f///////f/9/AAD/f///AAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/f///////f/9/AAD/f///AAD/f/9/////f///////f/9/////f///AAD/f/9/////f///////f/9/////f///AAD/f/9/////f///////f/9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/AAD/fwAA/38AAGd6gQn/fwAAdH7aAf9///9RLra8/3////9/////f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_vlbs4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ojeb6"]

[sub_resource type="ArrayMesh" id="ArrayMesh_eel6w"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAHAAUABAAGAAcABgAJAAcABgAIAAkACAALAAkACAAKAAsACgANAAsACgAMAA0ABQABAAMAAQANAA8ADQAJAAsACQAFAAcABQANAAEADQAFAAkADAAPAA0ADAAOAA8ADgABAA8ADgAAAAEADgACAAAAAgAGAAQABgAKAAgACgAOAAwADgAGAAIABgAOAAoA"),
"lods": [0.318437, PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAJAAUABAAKAAkACgANAAkACgAMAA0ABQABAAMABQANAAEADQAFAAkADAABAA0ADAAAAAEADAACAAAADAAEAAIABAAMAAoA"), 0.619714, PackedByteArray("AAAFAAEAAAAEAAUABAANAAUABAAMAA0ABQANAAEADAABAA0ADAAAAAEADAAEAAAA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("/38AAAAAAAD/f///AAAAAIHaAAB9JQAAgdr//30lAAD//wAA/38AAP//////fwAAgdoAAIHaAACB2v//gdoAAP9/AAD//wAA/3//////AAB9JQAAgdoAAH0l//+B2gAAAAAAAP9/AAAAAP///38AAH0lAAB9JQAAfSX//30lAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_j8btk"]
resource_name = "scale_Cylinder_002"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/7+Ogv///38AAP9//z+Ogv//AAAAAAAAcOuNlP/f/3//3/9/cWuNlP/fAAD/3wAAb/3/v/+//3//v/9/cH3/v/+/AAD/vwAAcOtw6/+f/3//n/9/cWtw6/+fAAD/nwAA/79v/f9//3//f/9//z9v/f9/AAD/fwAAjZRw6/9f/3//X/9/jhRw6/9fAAD/XwAAjoL/v/8//3//P/9/jwL/v/8/AAD/PwAAjZSNlP8f/3//H/9/jhSNlP8fAAD/HwAAAAAAAP+//3//v/9//78AAP+/AAD/P/9//z//f/8/AAD/PwAAAAAAAP/f/3//3wAA/7//f/+//3//vwAA/38AAP9/AAD/X/9//1//f/8//3//PwAA"),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray("AQAKAAQAAQAHAAoACAARAAsACAAOABEADQAXABAADQAUABcAEwAcABYAEwAZABwAGgAiAB0AGgAfACIAIAAoACMAIAAlACgADwADAAkAAwAnAC0AJwAbACEAGwAPABUADwAnAAMAJwAPABsAJgAvACkAJgAsAC8AKwAFAC4AKwACAAUAKgAGAAAABgASAAwAEgAeABgAHgAqACQAKgASAAYAEgAqAB4A"),
"lods": [0.318437, PackedByteArray("AQA7AAQAAQA6ADsAOgA+ADsAOgA8AD4APQA/ABAAPQBBAD8AQgAoAEAAQgAlACgADwADAAkADwAnAAMAJwAPABsAQwA5AEQAQwACADkAJAAGAAAAJAAMAAYADAAkAB4A"), 0.619714, PackedByteArray("AQAzAAQAAQAxADMAMgA3ADQAMgA1ADcADwAnAAMANgAwADgANgACADAAJAAMAAAA")],
"material": SubResource("StandardMaterial3D_ojeb6"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 69,
"vertex_data": PackedByteArray("/38AAAAA/z//fwAAAAD+7/9/AAAAAP7v/3///wAA/7//f///AAD+7/9///8AAP7vgdoAAH0l/z+B2gAAfSX+74HaAAB9Jf/Pgdr//30l/7+B2v//fSX+74Ha//99Jf/P//8AAP9//z///wAA/3//r///AAD/f//P//////9//7///////3//r///////f//PgdoAAIHa/z+B2gAAgdr/j4HaAACB2v+vgdr//4Ha/7+B2v//gdr/j4Ha//+B2v+v/38AAP///z//fwAA////j/9/AAD///+P/3///////7//f///////j/9///////+PfSUAAIHa/z99JQAAgdr/j30lAACB2v+vfSX//4Ha/799Jf//gdr/j30l//+B2v+vAAAAAP9//z8AAAAA/3//rwAAAAD/f//PAAD///9//78AAP///3//rwAA////f//PfSUAAH0l/z99JQAAfSX+730lAAB9Jf/PfSX//30l/799Jf//fSX+730l//99Jf/P/3///wAAx+j//wAA/38Qwv//AAD/fxqi//////9/0sP//////3+LpAAAAAD/f/ujAAAAAP9/7sMAAP///3/voAAA////f/HA/3///wAAReqB2gAAfSVp44Ha//99JTjq//8AAP9//7///wAA/39Mqf//////f/+//3//////RJT/f//////Fk30lAACB2jWOfSUAAIHa3J0AAAAA/38AxQAA////f3rBAAD/f/9/AAD/f///////f/9/AAD/f///AAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/f///////f/9/AAD/f///AAD/f/9/////f///////f/9/////f///AAD/f/9/////f///////f/9/////f///AAD/f/9/////f///////f/9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/AAD/fwAA/38AAGd6gQn/fwAAdH7aAf9///9RLra8/3////9/////f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_eel6w")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lya2l"]
data = PackedVector3Array(0, -1, -1, 0.707107, 1, -0.707107, 0, 1, -1, 0, -1, -1, 0.707107, -1, -0.707107, 0.707107, 1, -0.707107, 0.707107, -1, -0.707107, 1, 1, 0, 0.707107, 1, -0.707107, 0.707107, -1, -0.707107, 1, -1, 0, 1, 1, 0, 1, -1, 0, 0.707107, 1, 0.707107, 1, 1, 0, 1, -1, 0, 0.707107, -1, 0.707107, 0.707107, 1, 0.707107, 0.707107, -1, 0.707107, 0, 1, 1, 0.707107, 1, 0.707107, 0.707107, -1, 0.707107, 0, -1, 1, 0, 1, 1, 0, -1, 1, -0.707107, 1, 0.707107, 0, 1, 1, 0, -1, 1, -0.707107, -1, 0.707107, -0.707107, 1, 0.707107, -0.707107, -1, 0.707107, -1, 1, 0, -0.707107, 1, 0.707107, -0.707107, -1, 0.707107, -1, -1, 0, -1, 1, 0, 1, 1, 0, 0, 1, -1, 0.707107, 1, -0.707107, 0, 1, -1, -1, 1, 0, -0.707107, 1, -0.707107, -1, 1, 0, 0, 1, 1, -0.707107, 1, 0.707107, 0, 1, 1, 1, 1, 0, 0.707107, 1, 0.707107, 1, 1, 0, -1, 1, 0, 0, 1, -1, -1, 1, 0, 1, 1, 0, 0, 1, 1, -1, -1, 0, -0.707107, 1, -0.707107, -1, 1, 0, -1, -1, 0, -0.707107, -1, -0.707107, -0.707107, 1, -0.707107, -0.707107, -1, -0.707107, 0, 1, -1, -0.707107, 1, -0.707107, -0.707107, -1, -0.707107, 0, -1, -1, 0, 1, -1, -0.707107, -1, -0.707107, 0.707107, -1, -0.707107, 0, -1, -1, 0.707107, -1, -0.707107, 0.707107, -1, 0.707107, 1, -1, 0, 0.707107, -1, 0.707107, -0.707107, -1, 0.707107, 0, -1, 1, -0.707107, -1, 0.707107, -0.707107, -1, -0.707107, -1, -1, 0, -0.707107, -1, -0.707107, 0.707107, -1, 0.707107, 0.707107, -1, -0.707107, 0.707107, -1, 0.707107, -0.707107, -1, -0.707107, -0.707107, -1, 0.707107)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y5y7c"]

[sub_resource type="ArrayMesh" id="ArrayMesh_wxxu8"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAHAAUABAAGAAcABgAJAAcABgAIAAkACAALAAkACAAKAAsACgANAAsACgAMAA0ABQABAAMAAQANAA8ADQAJAAsACQAFAAcABQANAAEADQAFAAkADAAPAA0ADAAOAA8ADgABAA8ADgAAAAEADgACAAAAAgAGAAQABgAKAAgACgAOAAwADgAGAAIABgAOAAoA"),
"lods": [0.318437, PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAJAAUABAAKAAkACgANAAkACgAMAA0ABQABAAMABQANAAEADQAFAAkADAABAA0ADAAAAAEADAACAAAADAAEAAIABAAMAAoA"), 0.619714, PackedByteArray("AAAFAAEAAAAEAAUABAANAAUABAAMAA0ABQANAAEADAABAA0ADAAAAAEADAAEAAAA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("/38AAAAAAAD/f///AAAAAIHaAAB9JQAAgdr//30lAAD//wAA/38AAP//////fwAAgdoAAIHaAACB2v//gdoAAP9/AAD//wAA/3//////AAB9JQAAgdoAAH0l//+B2gAAAAAAAP9/AAAAAP///38AAH0lAAB9JQAAfSX//30lAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_0evbf"]
resource_name = "scale_Cylinder_003"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/7+Ogv///38AAP9//z+Ogv//AAAAAAAAcOuNlP/f/3//3/9/cWuNlP/fAAD/3wAAb/3/v/+//3//v/9/cH3/v/+/AAD/vwAAcOtw6/+f/3//n/9/cWtw6/+fAAD/nwAA/79v/f9//3//f/9//z9v/f9/AAD/fwAAjZRw6/9f/3//X/9/jhRw6/9fAAD/XwAAjoL/v/8//3//P/9/jwL/v/8/AAD/PwAAjZSNlP8f/3//H/9/jhSNlP8fAAD/HwAAAAAAAP+//3//v/9//78AAP+/AAD/P/9//z//f/8/AAD/PwAAAAAAAP/f/3//3wAA/7//f/+//3//vwAA/38AAP9/AAD/X/9//1//f/8//3//PwAA"),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray("AQAKAAQAAQAHAAoACAARAAsACAAOABEADQAXABAADQAUABcAEwAcABYAEwAZABwAGgAiAB0AGgAfACIAIAAoACMAIAAlACgADwADAAkAAwAnAC0AJwAbACEAGwAPABUADwAnAAMAJwAPABsAJgAvACkAJgAsAC8AKwAFAC4AKwACAAUAKgAGAAAABgASAAwAEgAeABgAHgAqACQAKgASAAYAEgAqAB4A"),
"lods": [0.318437, PackedByteArray("AQA7AAQAAQA6ADsAOgA+ADsAOgA8AD4APQA/ABAAPQBBAD8AQgAoAEAAQgAlACgADwADAAkADwAnAAMAJwAPABsAQwA5AEQAQwACADkAJAAGAAAAJAAMAAYADAAkAB4A"), 0.619714, PackedByteArray("AQAzAAQAAQAxADMAMgA3ADQAMgA1ADcADwAnAAMANgAwADgANgACADAAJAAMAAAA")],
"material": SubResource("StandardMaterial3D_y5y7c"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 69,
"vertex_data": PackedByteArray("/38AAAAA/z//fwAAAAD+7/9/AAAAAP7v/3///wAA/7//f///AAD+7/9///8AAP7vgdoAAH0l/z+B2gAAfSX+74HaAAB9Jf/Pgdr//30l/7+B2v//fSX+74Ha//99Jf/P//8AAP9//z///wAA/3//r///AAD/f//P//////9//7///////3//r///////f//PgdoAAIHa/z+B2gAAgdr/j4HaAACB2v+vgdr//4Ha/7+B2v//gdr/j4Ha//+B2v+v/38AAP///z//fwAA////j/9/AAD///+P/3///////7//f///////j/9///////+PfSUAAIHa/z99JQAAgdr/j30lAACB2v+vfSX//4Ha/799Jf//gdr/j30l//+B2v+vAAAAAP9//z8AAAAA/3//rwAAAAD/f//PAAD///9//78AAP///3//rwAA////f//PfSUAAH0l/z99JQAAfSX+730lAAB9Jf/PfSX//30l/799Jf//fSX+730l//99Jf/P/3///wAAx+j//wAA/38Qwv//AAD/fxqi//////9/0sP//////3+LpAAAAAD/f/ujAAAAAP9/7sMAAP///3/voAAA////f/HA/3///wAAReqB2gAAfSVp44Ha//99JTjq//8AAP9//7///wAA/39Mqf//////f/+//3//////RJT/f//////Fk30lAACB2jWOfSUAAIHa3J0AAAAA/38AxQAA////f3rBAAD/f/9/AAD/f///////f/9/AAD/f///AAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/fwAA////f/9/AAD/fwAAAAD/f/9/AAD/f///////f/9/AAD/f///AAD/f/9/////f///////f/9/////f///AAD/f/9/////f///////f/9/////f///AAD/f/9/////f///////f/9/////f////3////9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/AAD/fwAA/38AAGd6gQn/fwAAdH7aAf9///9RLra8/3////9/////f///")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wxxu8")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_tm83s"]
data = PackedVector3Array(0, -1, -1, 0.707107, 1, -0.707107, 0, 1, -1, 0, -1, -1, 0.707107, -1, -0.707107, 0.707107, 1, -0.707107, 0.707107, -1, -0.707107, 1, 1, 0, 0.707107, 1, -0.707107, 0.707107, -1, -0.707107, 1, -1, 0, 1, 1, 0, 1, -1, 0, 0.707107, 1, 0.707107, 1, 1, 0, 1, -1, 0, 0.707107, -1, 0.707107, 0.707107, 1, 0.707107, 0.707107, -1, 0.707107, 0, 1, 1, 0.707107, 1, 0.707107, 0.707107, -1, 0.707107, 0, -1, 1, 0, 1, 1, 0, -1, 1, -0.707107, 1, 0.707107, 0, 1, 1, 0, -1, 1, -0.707107, -1, 0.707107, -0.707107, 1, 0.707107, -0.707107, -1, 0.707107, -1, 1, 0, -0.707107, 1, 0.707107, -0.707107, -1, 0.707107, -1, -1, 0, -1, 1, 0, 1, 1, 0, 0, 1, -1, 0.707107, 1, -0.707107, 0, 1, -1, -1, 1, 0, -0.707107, 1, -0.707107, -1, 1, 0, 0, 1, 1, -0.707107, 1, 0.707107, 0, 1, 1, 1, 1, 0, 0.707107, 1, 0.707107, 1, 1, 0, -1, 1, 0, 0, 1, -1, -1, 1, 0, 1, 1, 0, 0, 1, 1, -1, -1, 0, -0.707107, 1, -0.707107, -1, 1, 0, -1, -1, 0, -0.707107, -1, -0.707107, -0.707107, 1, -0.707107, -0.707107, -1, -0.707107, 0, 1, -1, -0.707107, 1, -0.707107, -0.707107, -1, -0.707107, 0, -1, -1, 0, 1, -1, -0.707107, -1, -0.707107, 0.707107, -1, -0.707107, 0, -1, -1, 0.707107, -1, -0.707107, 0.707107, -1, 0.707107, 1, -1, 0, 0.707107, -1, 0.707107, -0.707107, -1, 0.707107, 0, -1, 1, -0.707107, -1, 0.707107, -0.707107, -1, -0.707107, -1, -1, 0, -0.707107, -1, -0.707107, 0.707107, -1, 0.707107, 0.707107, -1, -0.707107, 0.707107, -1, 0.707107, -0.707107, -1, -0.707107, -0.707107, -1, 0.707107)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ovm1g"]
height = 6.2609
radius = 2.09526

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wpsow"]
height = 3.38429
radius = 2.09526

[node name="Scale" type="Node3D"]
script = ExtResource("1_x2ftb")
pan_height_range = 2.0

[node name="Visuals" type="Node3D" parent="."]

[node name="Cylinder" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0456975, 0, -0.0456975)
mesh = SubResource("ArrayMesh_bfrgu")
skeleton = NodePath("")

[node name="Cylinder_001" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(-1.62705e-08, -4.1424, 0, 0, 0, -0.372225, 0.372225, -1.8107e-07, 0, -0.0456975, 6.90857, -0.0456975)
mesh = SubResource("ArrayMesh_jj8ug")
skeleton = NodePath("")

[node name="RightPanMesh" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(-9.31439e-08, 0, -2.13088, 0, 0.14824, 0, 2.13088, 0, -9.31439e-08, 4.06285, 2, -0.0456973)
mesh = SubResource("ArrayMesh_j8btk")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Visuals/RightPanMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Visuals/RightPanMesh/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lya2l")

[node name="LeftPanMesh" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(-9.31439e-08, 0, -2.13088, 0, 0.14824, 0, 2.13088, 0, -9.31439e-08, -3.97146, 2, -0.0456976)
mesh = SubResource("ArrayMesh_0evbf")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Visuals/LeftPanMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Visuals/LeftPanMesh/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_tm83s")

[node name="LeftPan" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.09327, 1.91753, 0.138553)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftPan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.06605, 0)
shape = SubResource("CylinderShape3D_ovm1g")

[node name="RightPan" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.86918, 1.95908, 0)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightPan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.88111, 0)
shape = SubResource("CylinderShape3D_wpsow")

[node name="LeftPanLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.09327, 9.55789, 0.123511)
pixel_size = 0.01
text = "Bodies in Left Pan"

[node name="RightPanLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.84281, 9.55789, 0.123511)
pixel_size = 0.01
text = "Bodies in Right Pan"

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Check puzzle solution"

[connection signal="body_entered" from="LeftPan" to="." method="_on_left_pan_body_entered"]
[connection signal="body_exited" from="LeftPan" to="." method="_on_left_pan_body_exited"]
[connection signal="body_entered" from="RightPan" to="." method="_on_right_pan_body_entered"]
[connection signal="body_exited" from="RightPan" to="." method="_on_right_pan_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
